Fix components delete in components list
[OSF-8914]
Squashed commit of the following:

commit 785f6612bd836a0f2e57235aa01d79046d6aff2f
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Fri Mar 16 10:24:42 2018 -0400

    Update language on delete confirmation [skip ci]

commit 8ec14a4fd37cc1a05017c979e3cff962f3a81133
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Thu Mar 15 12:50:17 2018 -0400

    Update language [skip ci]

commit a387d241fd3725ef1e06869133107b5ed3c69e43
Merge: f8e6765f1d 51834dec9d
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Wed Mar 14 20:04:42 2018 -0400

    Merge branch 'develop' of https://github.com/CenterForOpenScience/osf.io into feature/components-delete

commit f8e6765f1d3c6012053b0c1bfbf6f05ab53b8ece
Merge: 6df475686e cd58deb172
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Fri Mar 9 17:26:06 2018 -0500

    Merge branch 'develop' of https://github.com/CenterForOpenScience/osf.io into feature/components-delete

commit 6df475686e9e77f831e9ec348f73cdd19aaaaa5d
Merge: 66f669f20b a16488e3cb
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Wed Feb 14 07:34:25 2018 -0500

    Merge branch 'develop' of https://github.com/CenterForOpenScience/osf.io into feature/components-delete

commit 66f669f20ba7aad0a4e93686a064f5eb25da4dfb
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Wed Feb 14 07:33:11 2018 -0500

    Show warning about preprints in child components

commit 96e7e0b6257fb01f9b4b24d5ff609f104e798bdf
Merge: de76606e3d 68dfa4c30a
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Tue Feb 13 07:28:13 2018 -0500

    Merge branch 'develop' of https://github.com/CenterForOpenScience/osf.io into feature/components-delete

commit de76606e3dfc5d808a717ceb625bef3336fffa58
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Mon Feb 5 13:30:35 2018 -0500

    Delete in batches for node with 100+ children

commit e12f5fb83065a0a9c12e74f928be792c706ff7d8
Author: Fabrice Mizero <fabmizz@gmail.com>
Date:   Wed Jan 31 16:32:18 2018 -

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -838,3 +838,8 @@ table.add-links {
     padding: 10px 40px 10px 40px;
     margin-bottom: 0;
 }
+
+#nodesDeleteTreebeard #tb-tbody {
+    height: 350px;
+    max-height: 500px;
+}
